# OCRA

./: .gitignore  CmakeLists.txt  LICENSE  README.md
API/: CmakeLists.txt
API/include/: Allocator.hpp  Buffer.hpp  Device.hpp  FrameBuffer.hpp  Handle.hpp  Instance.hpp  Memory.hpp  PhysicalDevice.hpp  QueryPool.hpp  RenderPass.hpp  UniqueHandle.hpp  WeakHandle.hpp
Driver/OpenGL/: CmakeLists.txt
ShaderCompiler/: CmakeLists.txt  README.md
ShaderCompiler/API/: CmakeLists.txt
ShaderCompiler/Program/: CmakeLists.txt
ShaderCompiler/UnitTests/: CMakeLists.txt
ShaderCompiler/UnitTests/src/: main.cpp
ShaderCompiler/include/: Shader.hpp
ShaderCompiler/src/: Shader.cpp  main.cpp
SwapChain/: CmakeLists.txt
SwapChain/include/: Surface.hpp  SwapChain.hpp
Tests/src/: GraphicsPipeline.cpp  main.cpp
UnitTests/: CmakeLists.txt
UnitTests/CommandBuffer/: CmakeLists.txt
UnitTests/Common/: CmakeLists.txt
UnitTests/DescriptorSets/: CMakeLists.txt  main.cpp
UnitTests/Functionalities/: CmakeLists.txt
UnitTests/GraphicsPipeline/: CmakeLists.txt
UnitTests/Multisampling/: CmakeLists.txt
UnitTests/PhysicalDevice/: CmakeLists.txt
UnitTests/Queue/: CmakeLists.txt
UnitTests/ShaderCompiler/: CMakeLists.txt
UnitTests/ShaderCompiler/src/: main.cpp
UnitTests/SwapChain/: CmakeLists.txt
UnitTests/Textures/: CmakeLists.txt
UnitTests/src/: CommandBuffer.cpp  GraphicsPipeline.cpp
cmake-tools/: Fetch_Dependencies.cmake  Fetch_GLEW.cmake  Fetch_GLSLang.cmake  Fetch_GoogleTest.cmake  Fetch_SPIRVCross.cmake  Fetch_SPIRVHeaders.cmake  Fetch_SPIRVTools.cmake  Fetch_VulkanHeaders.cmake  Fetch_VulkanLoader.cmake  Fetch_VulkanValidationLayers.cmake  add_subdirectory_with_folder.cmake
include/: Allocator.hpp  Blend.hpp  Buffer.hpp  ClearValue.hpp  Compare.hpp  Component.hpp  Context.hpp  Device.hpp  Extent3D.hpp  FrameBuffer.hpp  Handle.hpp  IndexType.hpp  Instance.hpp  Logic.hpp  Memory.hpp  Offset3D.hpp  Pass.hpp  PhysicalDevice.hpp  QueryPool.hpp  Queue.hpp  Rect2D.hpp  RenderPass.hpp  Sample.hpp  Scalar.hpp  ScissorTest.hpp  Stencil.hpp  SwapChain.hpp  VertexType.hpp  ViewPort.hpp  Window.hpp  WindowSurface.hpp
include/Buffer/: Buffer.hpp  Copy.hpp  Range.hpp  Transfer.hpp  Vertex.hpp  View.hpp
include/Command/: Buffer.hpp  CommandBuffer.hpp  Draw.hpp  Image.hpp  Pipeline.hpp  Pool.hpp  RenderPass.hpp  Scissor.hpp  VertexBuffer.hpp
include/Common/: Blend.hpp  ClearValue.hpp  ColorValue.hpp  DepthBounds.hpp  DepthRange.hpp  DepthStencilValue.hpp  Extent2D.hpp  Extent3D.hpp  IndexType.hpp  Offset3D.hpp  Rect.hpp  Vec.hpp  (+9 more)
tests/: CommandBuffer.cpp  Common.cpp  Common.hpp  GraphicsPipeline.cpp  PhysicalDevice.cpp  Queue.cpp  SwapChain.cpp  TestList.hpp  main.cpp
(+643 files in other folders)
